fix: :bug: fix navbar clipping into hero section

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -43,6 +43,7 @@ footer a:hover {
 }
 
 .bgimg-1 {
+    margin-top: 3rem;
     position: relative;
     background-attachment: fixed;
     background-position: center;
